SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\views\login.html SpringMVC-SpringSecurity-AngularJS\src\main\java\com\example\config\WebSecurityConfig.java SpringMVC-SpringSecurity-AngularJS\src\main\resources\application.properties SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\js\app.js SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\js\controller\fresherController.js SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\js\service\fresherService.js SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\views\fresher.html SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\views\fresher\add.html SpringMVC-SpringSecurity-AngularJS\src\main\resources\static\views\wellcome.html SpringMVC-SpringSecurity-AngularJS\src\main\resources\templates\error.html SpringMVC-SpringSecurity-AngularJS\src\main\resources\templates\index.html SpringMVC-SpringSecurity-AngularJS\src\main\resources\templates\login.html

--- a/SpringMVC-SpringSecurity-AngularJS/src/main/resources/static/views/fresher.html
+++ b/SpringMVC-SpringSecurity-AngularJS/src/main/resources/static/views/fresher.html
@@ -1,5 +1,5 @@
 <div ng-controller="FreshersController as ctrl">
-	<h1>Wellcome fresher</h1>
+	<h1>Page fresher</h1>
 	<hr/>
 	<add-fresher></add-fresher>
 	<hr/>
