--- a/SpringMVC-SpringSecurity-AngularJS/src/main/resources/static/views/fresher/add.html
+++ b/SpringMVC-SpringSecurity-AngularJS/src/main/resources/static/views/fresher/add.html
@@ -2,39 +2,57 @@
 <h2>Add New Fresher</h2>
 
 <div>
-	<form ng-submit="ctrl.submit()" novalidate>
-		<div class="_margin">
-			<label>Employee ID: <input type="text" ng-model="ctrl.fresher.employeeId"></label>
-		</div>
+	<form ng-submit="ctrl.submit()" novalidate class="form-horizontal">
+		 <div class="form-group">
+		    <label class="control-label col-sm-2" for="employeeId">Employee ID:</label>
+		    <div class="col-sm-5">
+		      <input type="employeeId" ng-model="ctrl.fresher.employeeId" class="form-control" id="employeeId" placeholder="Enter employee id">
+		    </div>
+		  </div>
+		  		
+		<div class="form-group">
+		    <label class="control-label col-sm-2" for="fullName">Full name:</label>
+		    <div class="col-sm-5">
+		      <input type="text" ng-model="ctrl.fresher.fullName" class="form-control" id="fullName" placeholder="Enter full name">
+		    </div>
+		  </div>
 		
-	    <div class="_margin">
-			<label>Full name: <input type="text" ng-model="ctrl.fresher.fullName"></label>
-		</div>
-		
-		<div class="_margin">
-			<label>Sex: <select ng-model="ctrl.fresher.sex">							    
+		<div class="form-group">
+		    <label class="control-label col-sm-2" for="fullName">Sex:</label>
+		    <div class="col-sm-3">
+		      <select class="form-control" ng-model="ctrl.fresher.sex">							    
 							    <option value="M">Male
 							    <option value="F">Female							    
-							</select></label>
-		</div>
-		
-		<div class="_margin">
-			<label>Short name: <input type="text" ng-model="ctrl.fresher.shortName"></label>
-		</div>
-		
-		<div class="_margin">
-			<label>Office: <select ng-model="ctrl.fresher.office">							    
-							    <option value="ETO1">ETO1
-							    <option value="ETO3">ETO3
-							    <option value="NTO">NTO
-							</select></label>
-		</div>
-		
-		<div class="_margin">
-			<label>Cube: <input type="text" ng-model="ctrl.fresher.cube"></label>
-		</div>
-		
-	    <button type="submit">Add Fresher</button>
+							</select>
+		    </div>
+		  </div>
+		  
+		 <div class="form-group">
+		    <label class="control-label col-sm-2" for="shortName">Short name:</label>
+		    <div class="col-sm-5">
+		      <input type="shortName" ng-model="ctrl.fresher.shortName" class="form-control" id="shortName" placeholder="Enter short name">
+		    </div>
+		  </div>
+		  
+		  	<div class="form-group">
+		    <label class="control-label col-sm-2" for="office">Office:</label>
+		    <div class="col-sm-3">
+		      <select class="form-control" ng-model="ctrl.fresher.office">							    
+				    <option value="ETO1">ETO1
+				    <option value="ETO3">ETO3
+				    <option value="NTO">NTO
+				</select>
+		    </div>
+		  </div>
+		  
+		<div class="form-group">
+		    <label class="control-label col-sm-2" for="cube">Cube:</label>
+		    <div class="col-sm-3">
+		      <input type="text" ng-model="ctrl.fresher.cube" class="form-control" id="cube" placeholder="Enter cube">
+		    </div>
+		  </div>		
+				
+	    <button type="submit" class="btn btn-primary">Add Fresher</button>
   	</form>
 </div>
 
