--- a/SpringMVC-SpringSecurity-AngularJS/src/main/resources/templates/login.html
+++ b/SpringMVC-SpringSecurity-AngularJS/src/main/resources/templates/login.html
@@ -8,26 +8,37 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	
+	<link href="../static/libs/bootstrap-3.3.7/css/bootstrap.min.css" th:href="@{libs/bootstrap-3.3.7/css/bootstrap.min.css}" rel="stylesheet" />
+	\<script src="../static/libs/bootstrap-3.3.7/js/bootstrap.min.js" th:src="@{/libs/bootstrap-3.3.7/js/bootstrap.min.js}"></script> 
 </head>
 
 <body >
 	<div class="container">
-		<div class="card card-container">
-			
-			<div align="center" >
+		<div align="center" >
 				<p style="color: red" th:if="${loginError}" class="error">Wrong user or password</p>
 			</div>
-			<form class="form-signin" name="myForm" th:action="@{/login}" method="POST" >
-				<input type="text" name="username" class="form-control"
-					placeholder="Username" required="required" /> <input type="password" name="password"
-					class="form-control" placeholder="Password" required="required"/>
-
-				<button class="btn btn-lg btn-primary btn-block btn-signin"
-					type="submit" >Login</button>
-			</form>
 			
-			<!-- /form -->
-		</div>
+		<form class="form-horizontal" name="myForm" th:action="@{/login}" method="POST">
+		    <div class="form-group">
+		      <label class="control-label col-sm-2" for="username">Username:</label>
+		      <div class="col-sm-5">
+		        <input type="text" name="username" class="form-control" id="username" placeholder="Enter username"/>
+		      </div>
+		    </div>
+		    <div class="form-group">
+		      <label class="control-label col-sm-2" for="pwd">Password:</label>
+		      <div class="col-sm-5">          
+		        <input type="password" name="password" class="form-control" id="pwd" placeholder="Enter password"/>
+		      </div>
+		    </div>
+		 
+		    <div class="form-group">        
+		      <div class="col-sm-offset-2 col-sm-10">
+		        <button type="submit" class="btn btn-default">Login</button>
+		      </div>
+		    </div>
+		  </form>
+		
 		<!-- /card-container -->
 	</div>
 	<!-- /container -->
@@ -35,13 +46,5 @@
 
   
 </body>
-<style>body, html{
-	background-image: url("/EInvoice/images/white.jpg");
-	height: 100%;
-    background-repeat: no-repeat;
-    background-image: url("/EInvoice/images/white.jpg");
-    background-position: center center;
-    background-attachment: fixed;
- 	background-size: cover;}
-	</style>
+
 </html>
